--- a/mamba.yml
+++ b/mamba.yml
@@ -1,154 +1,8 @@
-name: snakemake
+name: snakemake_example
 channels:
-  - r
-  - bioconda
   - conda-forge
-  - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_kmp_llvm
-  - amply=0.1.6=pyhd8ed1ab_1
-  - annotated-types=0.7.0=pyhd8ed1ab_1
-  - appdirs=1.4.4=pyhd8ed1ab_1
-  - argparse-dataclass=2.0.0=pyhd8ed1ab_0
-  - attrs=25.1.0=pyh71513ae_0
-  - brotli-python=1.1.0=py312h2ec8cdc_2
-  - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2025.1.31=hbcca054_0
-  - certifi=2025.1.31=pyhd8ed1ab_0
-  - cffi=1.17.1=py312h06ac9bb_0
-  - charset-normalizer=3.4.1=pyhd8ed1ab_0
-  - click=8.1.8=pyh707e725_0
-  - coin-or-cbc=2.10.12=h8b142ea_1
-  - coin-or-cgl=0.60.9=h1d3f3f2_0
-  - coin-or-clp=1.17.10=h07f2a63_0
-  - coin-or-osi=0.108.11=h6514dde_1
-  - coin-or-utils=2.11.12=h99da652_1
-  - coincbc=2.10.12=1_metapackage
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - coloredlogs=15.0.1=pyhd8ed1ab_4
-  - conda-inject=1.3.2=pyhd8ed1ab_0
-  - configargparse=1.7=pyhd8ed1ab_1
-  - connection_pool=0.0.3=pyhd3deb0d_0
-  - datrie=0.8.2=py312h66e93f0_8
-  - docutils=0.21.2=pyhd8ed1ab_1
-  - dpath=2.2.0=pyha770c72_0
-  - eido=0.2.4=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - gitdb=4.0.12=pyhd8ed1ab_0
-  - gitpython=3.1.44=pyhff2d567_0
-  - h2=4.2.0=pyhd8ed1ab_0
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - humanfriendly=10.0=pyh707e725_8
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - idna=3.10=pyhd8ed1ab_1
-  - immutables=0.21=py312h66e93f0_0
-  - importlib_resources=6.5.2=pyhd8ed1ab_0
-  - iniconfig=2.0.0=pyhd8ed1ab_1
-  - jinja2=3.1.5=pyhd8ed1ab_0
-  - jsonschema=4.23.0=pyhd8ed1ab_1
-  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - ld_impl_linux-64=2.43=h712a8e2_2
-  - libblas=3.9.0=29_h59b9bed_openblas
-  - libcblas=3.9.0=29_he106b2a_openblas
-  - libexpat=2.6.4=h5888daf_0
-  - libffi=3.4.6=h2dba641_0
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgfortran=14.2.0=h69a702a_1
-  - libgfortran-ng=14.2.0=h69a702a_1
-  - libgfortran5=14.2.0=hd5240d6_1
-  - libhwloc=2.11.2=default_h0d58e46_1001
-  - libiconv=1.17=hd590300_2
-  - liblapack=3.9.0=29_h7ac8fdf_openblas
-  - liblapacke=3.9.0=29_he2f377e_openblas
-  - liblzma=5.6.4=hb9d3cd8_0
-  - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.28=pthreads_h94d23a6_1
-  - libsqlite=3.48.0=hee588c1_1
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-ng=14.2.0=h4852527_1
-  - libuuid=2.38.1=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.13.5=h0d44e9d_1
-  - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=19.1.7=h024ca30_0
-  - logmuse=0.2.8=pyhd8ed1ab_1
-  - markdown-it-py=3.0.0=pyhd8ed1ab_1
-  - markupsafe=3.0.2=py312h178313f_1
-  - mdurl=0.1.2=pyhd8ed1ab_1
-  - mkl=2024.2.2=ha957f24_16
-  - nbformat=5.10.4=pyhd8ed1ab_1
-  - ncurses=6.5=h2d0b736_3
-  - numpy=2.2.3=py312h72c5963_0
-  - openssl=3.4.1=h7b32b05_0
-  - packaging=24.2=pyhd8ed1ab_2
-  - pandas=2.2.3=py312hf9745cd_1
-  - pephubclient=0.4.4=pyhd8ed1ab_1
-  - peppy=0.40.7=pyhd8ed1ab_2
-  - pip=25.0.1=pyh8b19718_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
-  - plac=1.4.3=pyhd8ed1ab_1
-  - platformdirs=4.3.6=pyhd8ed1ab_1
-  - pluggy=1.5.0=pyhd8ed1ab_1
-  - psutil=6.1.1=py312h66e93f0_0
-  - pulp=2.8.0=py312h7900ff3_0
-  - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.6=pyh3cfb1c2_0
-  - pydantic-core=2.27.2=py312h12e396e_0
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - pyparsing=3.2.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha55dd90_7
-  - pytest=8.3.4=pyhd8ed1ab_1
-  - python=3.12.9=h9e4cc4f_0_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
-  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
-  - python-tzdata=2025.1=pyhd8ed1ab_0
-  - python_abi=3.12=5_cp312
-  - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.2=py312h178313f_2
-  - readline=8.2=h8228510_1
-  - referencing=0.36.2=pyh29332c3_0
-  - requests=2.32.3=pyhd8ed1ab_1
-  - reretry=0.11.8=pyhd8ed1ab_1
-  - rich=13.9.4=pyhd8ed1ab_1
-  - rpds-py=0.22.3=py312h12e396e_0
-  - setuptools=75.8.0=pyhff2d567_0
-  - shellingham=1.5.4=pyhd8ed1ab_1
-  - six=1.17.0=pyhd8ed1ab_0
-  - slack-sdk=3.34.0=pyhd8ed1ab_0
-  - slack_sdk=3.34.0=hd8ed1ab_0
-  - smart_open=7.1.0=pyhd8ed1ab_0
-  - smmap=5.0.0=pyhd8ed1ab_0
-  - snakemake=8.28.0=hdfd78af_0
-  - snakemake-interface-common=1.17.4=pyhdfd78af_0
-  - snakemake-interface-executor-plugins=9.3.3=pyhdfd78af_0
-  - snakemake-interface-report-plugins=1.1.0=pyhdfd78af_0
-  - snakemake-interface-storage-plugins=3.3.0=pyhdfd78af_0
-  - snakemake-minimal=8.28.0=pyhdfd78af_0
-  - tabulate=0.9.0=pyhd8ed1ab_2
-  - tbb=2021.13.0=hceb3a55_1
-  - throttler=1.2.2=pyhd8ed1ab_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - tomli=2.2.1=pyhd8ed1ab_1
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - typer=0.15.1=pyhd8ed1ab_0
-  - typer-slim=0.15.1=pyhd8ed1ab_0
-  - typer-slim-standard=0.15.1=hd8ed1ab_0
-  - typing-extensions=4.12.2=hd8ed1ab_1
-  - typing_extensions=4.12.2=pyha770c72_1
-  - tzdata=2025a=h78e105d_0
-  - ubiquerg=0.8.0=pyhd8ed1ab_0
-  - urllib3=2.3.0=pyhd8ed1ab_0
-  - veracitools=0.1.3=py_0
-  - wheel=0.45.1=pyhd8ed1ab_1
-  - wrapt=1.17.2=py312h66e93f0_0
-  - yaml=0.2.5=h7f98852_2
-  - yte=1.5.7=pyha770c72_0
-  - zipp=3.21.0=pyhd8ed1ab_1
-  - zstandard=0.23.0=py312hef9b889_1
-  - zstd=1.5.6=ha6fb4c9_0
-  - pip:
-      - python-dotenv==1.0.1
-prefix: /home/ms13525/miniforge3/envs/snakemake
+  - python=3.12
+  - conda-forge::r-base
+  - ca-certificates
+  - openssl
