--- a/methylseq/config/bc4.yaml
+++ b/methylseq/config/bc4.yaml
@@ -1,3 +1,4 @@
+executor: slurm
 cluster:
   export USER=$(whoami) &&
   export ACCOUNT_ID=$(sacctmgr show user withassoc format=account where user=$USER | grep '[0-9]' | head -n1) &&
@@ -27,7 +28,5 @@ latency-wait: 10
 jobs: 10
 keep-going: True
 rerun-incomplete: True
-use-singularity: True
-#singularity-args: '-B $(pwd)/R:/home/R -B $(pwd)/scripts:/home/scripts'
 printshellcmds: True
 scheduler: greedy
