--- a/minimal/Snakefile
+++ b/minimal/Snakefile
@@ -1,9 +1,5 @@
-from dotenv import dotenv_values
-config = dotenv_values("config.env")
-
-datadir=config["datadir"]
-resultsdir=config["resultsdir"]
-scriptsdir=config["scriptsdir"]
+datadir=config["paths"]["data"]
+resultsdir=config["paths"]["results"]
 
 onstart:
     print("##### Running minimal snakemake pipeline #####")
