--- a/methylseq/config/bc4.yaml
+++ b/methylseq/config/bc4.yaml
@@ -1,8 +1,17 @@
+paths:
+    data: &pathdata '/tmp/snakemake-example-methylseq-data'
+    results: 'example-results'
+
+parameters:
+    assembly: 'hg19'
+
+use-apptainer: True
+apptainer-args: '-B *pathdata'
+
 executor: slurm
 cluster:
   export USER=$(whoami) &&
   export ACCOUNT_ID=$(sacctmgr show user withassoc format=account where user=$USER | grep '[0-9]' | head -n1) &&
-  mkdir -p /user/work/$USER/slurm_logs &&
   sbatch
     --partition={resources.partition}
     --account=$ACCOUNT_ID
@@ -13,7 +22,7 @@ cluster:
     --cpus-per-task={threads}
     --mem={resources.mem}
     --job-name={rule}-{wildcards}
-    --output=/user/work/$USER/slurm_logs/{rule}_%j.out
+    --output=slurm_log_{rule}_%j.out
 default-resources:
   - time='01:00:00'
   - partition=mrcieu
